...
						//   onFilled={(text) => console.log(`OTP is ${text}`)}
						onFilled={(text) => {
							console.log(`Code is ${text}, you are good to go!`);
							handleSubmit(text);
						}}
						textInputProps={{
							accessibilityLabel: "One-Time Password",
						}}

					/>
				</View>

				<View style={{ margin: 20 }}>
...
