...
          source={require('../../../assets/images/home.png')} // Path to your image
          style={{
            width: 45, height: 45, position: "absolute",
            left: "2%",
          }}
        />
        <Text style={{ padding: 10, textAlign: 'center', fontSize: 24, fontWeight: '500' }}>GLocal Search</Text>
        <View style={{ position: "absolute", right: "2%" }}>
          <MaterialCommunityIcons name="heart-outline" color={"rgb(137, 135, 135)"} size={30} />
        </View>
      </View> */}
      {/* Sticky Header */}
      <View style={styles.stickyHeader}>
...
